// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrim render should render correctly 1`] = `
<div
  className="bpk-scrim-content"
>
  <div
    className="bpk-scrim"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="presentation"
  />
  <TestComponent
    dialogRef={[Function]}
    isIpad={false}
    isIphone={false}
    onClose={[Function]}
  />
</div>
`;

exports[`BpkScrim render should render correctly when is iPhone 1`] = `
<div
  className="bpk-scrim-content"
>
  <div
    className="bpk-scrim"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="presentation"
  />
  <TestComponent
    dialogRef={[Function]}
    isIpad={false}
    isIphone={true}
    onClose={[Function]}
  />
</div>
`;

exports[`BpkScrim render should render correctly with closeOnScrimClick as false 1`] = `
<div
  className="bpk-scrim-content"
>
  <div
    className="bpk-scrim"
    onMouseDown={null}
    onTouchStart={null}
    role="presentation"
  />
  <TestComponent
    dialogRef={[Function]}
    isIpad={false}
    isIphone={false}
    onClose={[Function]}
  />
</div>
`;

exports[`BpkScrim render should render correctly with containerClassName 1`] = `
<div
  className="bpk-scrim-content containerClassName"
>
  <div
    className="bpk-scrim"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
    role="presentation"
  />
  <TestComponent
    dialogRef={[Function]}
    isIpad={false}
    isIphone={false}
    onClose={[Function]}
  />
</div>
`;
